--- a/main.html
+++ b/main.html
@@ -3,11 +3,48 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<style>
+		.testimonial-container{
+          background-color: #f5f5f5;
+			
+		}
+		.testimonial {
+            background-color: white;
+            padding: 20px;
+            border: 1px solid #ddd;
+            margin: 20px auto;
+            max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+		.testimonial p {
+            font-size: 16px;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        /* Styling for the author's name */
+        .testimonial .author {
+            text-align: right;
+            font-style: italic;
+            font-weight: bold;
+            color: #555;
+        }
+
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+	<div class="testimonial-container">
+		<div class="testimonial">
+			<p>This product exceeded my expectations! The quality and service were outstanding. Highly recommend it!</p>
+            <p class="author">- John Doe</p>
+		
+		<div class="Testimonial">
+			<p>This product exceeded my expectations! The quality and service were outstanding. Highly recommend it!</p>
+            <p class="author">- John Doe</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
